fixed splice with 99999, 0, {new_el} code cleanup refactored tests added tests for splice

--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -17,9 +17,9 @@
             div.innerHTML = text;
             return {text: text, el: div};
         }
-        function clean() {
-            some.innerHTML = '';
-        }
+
+        someRAID.splice(0, 0, make_el_obj(4), make_el_obj(5), make_el_obj(6));
+        debugger;
     </script>
 
 </body>
